--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
-    "ember-cli-visjs": "/Users/james/Documents/GitHub/ember-cli-visjs/",
+    "ember-cli-visjs": "https://github.com/JamesS-M/ember-cli-visjs",
     "ember-data": "~3.1.0",
     "ember-export-application-global": "^2.0.0",
     "ember-jquery": "^1.0.5",
