--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ember-jquery": "^1.0.5",
     "ember-load-initializers": "^1.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-md5": "^1.2.0",
     "ember-power-select": "^2.0.3",
     "ember-resolver": "^4.0.0",
     "ember-source": "~3.1.0",
