--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
     "ember-cli-visjs": "https://github.com/JamesS-M/ember-cli-visjs",
+    "ember-composable-helpers": "^2.1.0",
     "ember-data": "~3.1.0",
     "ember-export-application-global": "^2.0.0",
     "ember-jquery": "^1.0.5",
