--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   "dependencies": {
     "bower": "^1.8.4",
     "dotenv": "^6.0.0",
+    "standard": "^12.0.1",
     "watchman": "^1.0.0"
   }
 }
