--- a/package.json
+++ b/package.json
@@ -17,23 +17,23 @@
     "test": "ember test"
   },
   "devDependencies": {
-    "@fortawesome/ember-fontawesome": "^0.1.0",
+    "@fortawesome/ember-fontawesome": "^0.1.9",
     "@fortawesome/free-regular-svg-icons": "^5.1.0",
     "@fortawesome/free-solid-svg-icons": "^5.1.0",
     "bootstrap": "^4.1.1",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
-    "ember-basic-dropdown": "^1.0.3",
-    "ember-bootstrap": "^2.0.0",
+    "ember-basic-dropdown": "^1.1.1",
+    "ember-bootstrap": "^2.3.0",
     "ember-browserify": "^1.2.2",
-    "ember-cli": "~3.1.4",
+    "ember-cli": "~3.6.0",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.6.0",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^1.1.1",
     "ember-cli-deploy-cloudfront": "^1.3.0",
-    "ember-cli-deploy-display-revisions": "^1.0.0",
+    "ember-cli-deploy-display-revisions": "^1.0.1",
     "ember-cli-deploy-gzip": "^1.0.1",
     "ember-cli-deploy-manifest": "^1.1.0",
     "ember-cli-deploy-revision-data": "^1.0.0",
@@ -43,26 +43,26 @@
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-qunit": "^4.1.1",
+    "ember-cli-qunit": "^4.4.0",
     "ember-cli-sass": "^7.2.0",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
     "ember-cli-visjs": "https://github.com/JamesS-M/ember-cli-visjs",
     "ember-composable-helpers": "^2.1.0",
-    "ember-data": "~3.1.0",
+    "ember-data": "^3.6.0",
     "ember-export-application-global": "^2.0.0",
     "ember-group-by": "0.0.5",
     "ember-jquery": "^1.0.5",
     "ember-load-initializers": "^1.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-md5": "^1.2.0",
-    "ember-power-select": "^2.0.3",
+    "ember-power-select": "^2.2.1",
     "ember-resolver": "^4.0.0",
-    "ember-source": "~3.1.0",
+    "ember-source": "^3.6.0",
     "ember-truth-helpers": "^2.1.0",
     "ember-welcome-page": "^3.0.0",
-    "ember-wormhole": "^0.5.4",
+    "ember-wormhole": "^0.5.5",
     "eslint-plugin-ember": "^5.0.0",
     "loader.js": "^4.2.3",
     "neo4j-driver": "^1.6.3"
