--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neo4j-app",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "private": true,
   "description": "Visualize and edit your data with a node-based editing tool.",
   "license": "MIT",
@@ -18,18 +18,18 @@
   },
   "devDependencies": {
     "@fortawesome/ember-fontawesome": "^0.1.9",
-    "@fortawesome/free-regular-svg-icons": "^5.1.0",
-    "@fortawesome/free-solid-svg-icons": "^5.1.0",
+    "@fortawesome/free-regular-svg-icons": "^5.6.1",
+    "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "bootstrap": "^4.1.1",
-    "broccoli-asset-rev": "^2.4.5",
-    "ember-ajax": "^3.0.0",
+    "broccoli-asset-rev": "^3.0.0",
+    "ember-ajax": "^4.0.1",
     "ember-basic-dropdown": "^1.1.1",
     "ember-bootstrap": "^2.3.0",
     "ember-browserify": "^1.2.2",
     "ember-cli": "~3.6.0",
     "ember-cli-app-version": "^3.0.0",
-    "ember-cli-babel": "^6.6.0",
-    "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-babel": "^7.2.0",
+    "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^1.1.1",
     "ember-cli-deploy-cloudfront": "^1.3.0",
@@ -39,12 +39,12 @@
     "ember-cli-deploy-revision-data": "^1.0.0",
     "ember-cli-deploy-s3": "^1.4.0",
     "ember-cli-deploy-s3-index": "^1.0.1",
-    "ember-cli-eslint": "^4.2.1",
-    "ember-cli-htmlbars": "^2.0.1",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.0",
-    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-eslint": "^5.0.0",
+    "ember-cli-htmlbars": "^3.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^2.1.0",
+    "ember-cli-inject-live-reload": "^2.0.1",
     "ember-cli-qunit": "^4.4.0",
-    "ember-cli-sass": "^7.2.0",
+    "ember-cli-sass": "^8.0.1",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
@@ -54,25 +54,26 @@
     "ember-export-application-global": "^2.0.0",
     "ember-group-by": "0.0.5",
     "ember-jquery": "^1.0.5",
-    "ember-load-initializers": "^1.0.0",
+    "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-md5": "^1.2.0",
     "ember-power-select": "^2.2.1",
-    "ember-resolver": "^4.0.0",
+    "ember-resolver": "^5.0.1",
     "ember-source": "^3.6.0",
     "ember-truth-helpers": "^2.1.0",
     "ember-welcome-page": "^3.0.0",
     "ember-wormhole": "^0.5.5",
-    "eslint-plugin-ember": "^5.0.0",
+    "eslint-plugin-ember": "^6.1.0",
     "loader.js": "^4.2.3",
-    "neo4j-driver": "^1.6.3"
+    "neo4j-driver": "^1.7.2",
+    "sass": "^1.15.2"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
   },
   "dependencies": {
     "bower": "^1.8.4",
-    "dotenv": "^6.0.0",
+    "dotenv": "^6.2.0",
     "standard": "^12.0.1",
     "watchman": "^1.0.0"
   }
