--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "neo4j-app",
+  "name": "Graph9",
   "version": "1.1.0",
   "private": true,
-  "description": "Visualize and edit your data with a node-based editing tool.",
+  "description": "Visualize and edit your data with a node-based network tool.",
   "license": "MIT",
   "author": "James Summerby-Murray",
   "directories": {
