--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ember-cli-uglify": "^2.0.0",
     "ember-cli-visjs": "https://github.com/JamesS-M/ember-cli-visjs",
     "ember-composable-helpers": "^2.1.0",
+    "ember-d3": "^0.5.0",
     "ember-data": "^3.6.0",
     "ember-export-application-global": "^2.0.0",
     "ember-group-by": "0.0.5",
@@ -73,6 +74,7 @@
   },
   "dependencies": {
     "bower": "^1.8.4",
+    "d3": "^5.7.0",
     "dotenv": "^6.2.0",
     "standard": "^12.0.1",
     "watchman": "^1.0.0"
