--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "ember build",
     "lint:js": "eslint ./*.js app blueprints config lib server tests",
     "start": "ember serve",
-    "test": "ember test"
+    "test": "standard && ember test"
   },
   "devDependencies": {
     "@fortawesome/ember-fontawesome": "^0.1.9",
@@ -49,6 +49,7 @@
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
     "ember-cli-visjs": "https://github.com/JamesS-M/ember-cli-visjs",
+    "ember-component-css": "^0.6.7",
     "ember-composable-helpers": "^2.1.0",
     "ember-d3": "^0.5.0",
     "ember-data": "^3.6.0",
@@ -58,6 +59,7 @@
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-md5": "^1.2.0",
+    "ember-paper": "^1.0.0-beta.22",
     "ember-power-select": "^2.2.1",
     "ember-resolver": "^5.0.1",
     "ember-source": "^3.6.0",
@@ -67,7 +69,8 @@
     "eslint-plugin-ember": "^6.1.0",
     "loader.js": "^4.2.3",
     "neo4j-driver": "^1.7.2",
-    "sass": "^1.15.2"
+    "sass": "^1.17.2",
+    "standard": "^12.0.1"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
@@ -76,7 +79,6 @@
     "bower": "^1.8.4",
     "d3": "^5.7.0",
     "dotenv": "^6.2.0",
-    "standard": "^12.0.1",
     "watchman": "^1.0.0"
   }
 }
