--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "ember build",
     "lint:js": "eslint ./*.js app blueprints config lib server tests",
     "start": "ember serve",
-    "test": "standard && ember test"
+    "test": "ember test"
   },
   "devDependencies": {
     "@fortawesome/ember-fontawesome": "^0.1.9",
