--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.1.1",
     "broccoli-asset-rev": "^3.0.0",
     "ember-ajax": "^4.0.1",
+    "ember-auto-import": "^1.4.1",
     "ember-basic-dropdown": "^1.1.1",
     "ember-bootstrap": "^2.3.0",
     "ember-browserify": "^1.2.2",
@@ -76,6 +77,8 @@
     "node": "^4.5 || 6.* || >= 7.*"
   },
   "dependencies": {
+    "@sentry/browser": "^5.4.0",
+    "@sentry/integrations": "^5.4.1",
     "bower": "^1.8.4",
     "d3": "^5.7.0",
     "dotenv": "^6.2.0",
