--- a/package.json
+++ b/package.json
@@ -17,71 +17,72 @@
     "test": "ember test"
   },
   "devDependencies": {
-    "@fortawesome/ember-fontawesome": "^0.1.9",
-    "@fortawesome/free-regular-svg-icons": "^5.6.1",
-    "@fortawesome/free-solid-svg-icons": "^5.6.1",
-    "bootstrap": "^4.1.1",
+    "@fortawesome/ember-fontawesome": "^0.1.13",
+    "@fortawesome/free-regular-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "bootstrap": "^4.3.1",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-ajax": "^4.0.1",
+    "ember-ajax": "^5.0.0",
     "ember-auto-import": "^1.4.1",
-    "ember-basic-dropdown": "^1.1.1",
-    "ember-bootstrap": "^2.3.0",
+    "ember-basic-dropdown": "^1.1.3",
+    "ember-body-class": "^1.1.3",
+    "ember-bootstrap": "^2.8.0",
     "ember-browserify": "^1.2.2",
-    "ember-cli": "~3.6.0",
-    "ember-cli-app-version": "^3.0.0",
-    "ember-cli-babel": "^7.2.0",
-    "ember-cli-dependency-checker": "^3.0.0",
+    "ember-cli": "~3.10.1",
+    "ember-cli-app-version": "^3.2.0",
+    "ember-cli-babel": "^7.8.0",
+    "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^1.1.1",
-    "ember-cli-deploy-cloudfront": "^1.3.0",
+    "ember-cli-deploy-cloudfront": "^2.0.0",
     "ember-cli-deploy-display-revisions": "^1.0.1",
     "ember-cli-deploy-gzip": "^1.0.1",
     "ember-cli-deploy-manifest": "^1.1.0",
     "ember-cli-deploy-revision-data": "^1.0.0",
     "ember-cli-deploy-s3": "^1.4.0",
     "ember-cli-deploy-s3-index": "^1.0.1",
-    "ember-cli-eslint": "^5.0.0",
+    "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^3.0.1",
     "ember-cli-htmlbars-inline-precompile": "^2.1.0",
     "ember-cli-inject-live-reload": "^2.0.1",
     "ember-cli-qunit": "^4.4.0",
-    "ember-cli-sass": "^8.0.1",
+    "ember-cli-sass": "^10.0.1",
     "ember-cli-shims": "^1.2.0",
-    "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^2.0.0",
-    "ember-cli-visjs": "https://github.com/JamesS-M/ember-cli-visjs",
-    "ember-component-css": "^0.6.7",
-    "ember-composable-helpers": "^2.1.0",
-    "ember-d3": "^0.5.0",
-    "ember-data": "^3.6.0",
+    "ember-cli-sri": "^2.1.1",
+    "ember-cli-uglify": "^3.0.0",
+    "ember-cli-visjs": "git+https://github.com/JamesS-M/ember-cli-visjs.git",
+    "ember-component-css": "^0.7.4",
+    "ember-composable-helpers": "^2.3.1",
+    "ember-d3": "^0.5.1",
+    "ember-data": "^3.10.0",
     "ember-export-application-global": "^2.0.0",
-    "ember-group-by": "0.0.5",
+    "ember-group-by": "0.0.6",
     "ember-jquery": "^1.0.5",
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-md5": "^1.2.0",
-    "ember-paper": "^1.0.0-beta.22",
-    "ember-power-select": "^2.2.1",
-    "ember-resolver": "^5.0.1",
-    "ember-source": "^3.6.0",
+    "ember-power-select": "^2.3.4",
+    "ember-resolver": "^5.1.3",
+    "ember-source": "^3.11.0",
     "ember-truth-helpers": "^2.1.0",
-    "ember-welcome-page": "^3.0.0",
+    "ember-welcome-page": "^4.0.0",
     "ember-wormhole": "^0.5.5",
-    "eslint-plugin-ember": "^6.1.0",
-    "loader.js": "^4.2.3",
-    "neo4j-driver": "^1.7.2",
-    "sass": "^1.17.2",
+    "eslint-plugin-ember": "^6.7.0",
+    "loader.js": "^4.7.0",
+    "neo4j-driver": "^1.7.5",
+    "sass": "^1.22.0",
     "standard": "^12.0.1"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
   },
   "dependencies": {
-    "@sentry/browser": "^5.4.0",
-    "@sentry/integrations": "^5.4.1",
-    "bower": "^1.8.4",
-    "d3": "^5.7.0",
-    "dotenv": "^6.2.0",
+    "@sentry/browser": "^5.4.3",
+    "@sentry/integrations": "^5.4.2",
+    "bower": "^1.8.8",
+    "d3": "^5.9.2",
+    "dotenv": "^8.0.0",
+    "ember-cli-update": "^0.34.10",
     "watchman": "^1.0.0"
   }
 }
