--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ember-basic-dropdown": "^1.1.3",
     "ember-body-class": "^1.1.3",
     "ember-bootstrap": "^2.8.0",
+    "ember-browserify": "^1.2.2",
     "ember-cli": "~3.10.1",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.8.0",
