--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ember-basic-dropdown": "^1.1.3",
     "ember-body-class": "^1.1.3",
     "ember-bootstrap": "^2.8.0",
+    "ember-bootstrap-power-select": "^1.1.0",
     "ember-browserify": "^1.2.2",
     "ember-cli": "~3.10.1",
     "ember-cli-app-version": "^3.2.0",
@@ -60,7 +61,8 @@
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-md5": "^1.2.0",
-    "ember-power-select": "^2.3.4",
+    "ember-power-select": "^2.3.5",
+    "ember-power-select-blockless": "^0.5.0",
     "ember-resolver": "^5.1.3",
     "ember-source": "^3.11.0",
     "ember-truth-helpers": "^2.1.0",
