--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
     "test": "ember test"
   },
   "devDependencies": {
-    "@fortawesome/ember-fontawesome": "^0.1.13",
-    "@fortawesome/free-regular-svg-icons": "^5.9.0",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/ember-fontawesome": "^0.1.14",
+    "@fortawesome/free-regular-svg-icons": "^5.10.2",
+    "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "bootstrap": "^4.3.1",
     "broccoli-asset-rev": "^3.0.0",
     "ember-ajax": "^5.0.0",
-    "ember-auto-import": "^1.4.1",
-    "ember-basic-dropdown": "^1.1.3",
+    "ember-auto-import": "^1.5.2",
+    "ember-basic-dropdown": "^2.0.5",
     "ember-body-class": "^1.1.3",
-    "ember-bootstrap": "^2.8.0",
+    "ember-bootstrap": "^3.0.0-rc.3",
     "ember-bootstrap-power-select": "^1.1.0",
     "ember-browserify": "^1.2.2",
-    "ember-cli": "~3.10.1",
+    "ember-cli": "~3.12.0",
     "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "^7.8.0",
+    "ember-cli-babel": "^7.11.0",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^1.1.1",
@@ -43,8 +43,8 @@
     "ember-cli-deploy-s3": "^1.4.0",
     "ember-cli-deploy-s3-index": "^1.0.1",
     "ember-cli-eslint": "^5.1.0",
-    "ember-cli-htmlbars": "^3.0.1",
-    "ember-cli-htmlbars-inline-precompile": "^2.1.0",
+    "ember-cli-htmlbars": "^3.1.0",
+    "ember-cli-htmlbars-inline-precompile": "^3.0.0",
     "ember-cli-inject-live-reload": "^2.0.1",
     "ember-cli-qunit": "^4.4.0",
     "ember-cli-sass": "^10.0.1",
@@ -54,35 +54,35 @@
     "ember-component-css": "^0.7.4",
     "ember-composable-helpers": "^2.3.1",
     "ember-d3": "^0.5.1",
-    "ember-data": "^3.10.0",
+    "ember-data": "^3.12.0",
     "ember-export-application-global": "^2.0.0",
     "ember-group-by": "0.0.6",
     "ember-jquery": "^1.0.5",
-    "ember-load-initializers": "^2.0.0",
+    "ember-load-initializers": "^2.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-md5": "^1.2.0",
-    "ember-power-select": "^2.3.5",
+    "ember-power-select": "^3.0.3",
     "ember-power-select-blockless": "^0.5.0",
-    "ember-resolver": "^5.1.3",
-    "ember-source": "^3.11.0",
+    "ember-resolver": "^5.2.1",
+    "ember-source": "^3.12.0",
     "ember-truth-helpers": "^2.1.0",
     "ember-wormhole": "^0.5.5",
-    "eslint-plugin-ember": "^6.7.0",
+    "eslint-plugin-ember": "^7.0.0",
+    "eslint-plugin-node": "^9.2.0",
     "loader.js": "^4.7.0",
-    "neo4j-driver": "^1.7.5",
-    "sass": "^1.22.1",
-    "standard": "^12.0.1"
+    "neo4j-driver": "^1.7.6",
+    "sass": "^1.22.10"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
   },
   "dependencies": {
-    "@sentry/browser": "^5.4.3",
-    "@sentry/integrations": "^5.4.2",
+    "@sentry/browser": "^5.6.3",
+    "@sentry/integrations": "^5.6.1",
     "bower": "^1.8.8",
-    "d3": "^5.9.7",
-    "dotenv": "^8.0.0",
-    "ember-cli-update": "^0.34.10",
+    "d3": "^5.11.0",
+    "dotenv": "^8.1.0",
+    "ember-cli-update": "^0.43.1",
     "watchman": "^1.0.0"
   }
 }
