--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "ember-load-initializers": "^2.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-md5": "^1.2.0",
+    "ember-percy": "^1.6.0",
     "ember-power-select": "^3.0.3",
     "ember-power-select-blockless": "^0.5.0",
     "ember-resolver": "^5.2.1",
