--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "ember-percy": "^1.6.0",
     "ember-power-select": "^3.0.3",
     "ember-power-select-blockless": "^0.5.0",
+    "ember-power-select-with-create": "^0.6.2",
     "ember-resolver": "^5.2.1",
     "ember-source": "^3.12.0",
     "ember-truth-helpers": "^2.1.0",
